--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     tools:context=".LoginActivity">
 
 
@@ -15,8 +16,8 @@
         android:padding="10dp">
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="98dp"
-            android:layout_height="132dp"
+            android:layout_width="198dp"
+            android:layout_height="232dp"
             android:layout_gravity="center"
             android:src="@drawable/banner_tandebike" />
         <TextView
